--- a/background.html
+++ b/background.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar Background</title>
-    <link rel="stylesheet" type="text'css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     
     <div id="bikinbg">
         <h2>Belajar Background</h2>
+    </div>
+
+    <div id="bikinpattern">
+        <h2>Belajar Pattern</h2>
     </div>
 
 </body>
